--- a/Aboutus.html
+++ b/Aboutus.html
@@ -13,7 +13,7 @@
         </div>
         
         <div id="right">
-            <a href="EatClub.html">HOME</a>
+            <a href="index.html">HOME</a>
             <a href="signuppage.html">SIGNUP</a>
             <a href="form.html">LOGIN</a>
         </div>
