--- a/form.html
+++ b/form.html
@@ -33,7 +33,7 @@
             
             <div id="butt">
             <button><a href="./foodcards.html">Login</a></button>
-            <button id="can"><a href="./Index.html"></a>Cancel</button>
+            <button id="can"><a href="./index.html"></a>Cancel</button>
             </div>
             <a href="signuppage.html" target="_blank">Signup for new account</a>
             <a href="signuppage.html" target="_blank">Forget Password</a>
