--- a/signuppage.html
+++ b/signuppage.html
@@ -34,8 +34,8 @@
                 <tr>
                     <td></td>
                     <td>
-                        <a href="./Index.html"><button id="submit" type="submit" class="submitBtn">Sign Up</button></a>
-                        <a href="./Index.html"><button type="button" onclick="resetForm()">Cancel</button></a>
+                        <a href="./index.html"><button id="submit" type="submit" class="submitBtn">Sign Up</button></a>
+                        <a href="./index.html"><button type="button" onclick="resetForm()">Cancel</button></a>
                     </td>
                 </tr>
             </table>
