--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         </div>
         
         <div id="right">
-            <a href="Index.html">HOME</a>
+            <a href="index.html">HOME</a>
             <a href="signuppage.html">SIGNUP</a>
             <a href="form.html">LOGIN</a>
         </div>
