--- a/signuppage.html
+++ b/signuppage.html
@@ -35,7 +35,7 @@
                     <td></td>
                     <td>
                         <a href="./index.html"><button id="submit" type="submit" class="submitBtn">Sign Up</button></a>
-                        <a href="./index.html"><button type="button" onclick="resetForm()">Cancel</button></a>
+                        <button type="button" onclick="resetForm()"><a href="./index.html">Cancel</a></button>
                     </td>
                 </tr>
             </table>
